--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": ""
+    "test": "",
+    "generate-api": "npx @openapitools/openapi-generator-cli generate -i http://localhost:5263/swagger/v1/swagger.json -g typescript-axios -o ./src/api/openAPI --skip-validate-spec"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
