--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "",
-    "generate-api": "npx @openapitools/openapi-generator-cli generate -i http://localhost:5263/swagger/v1/swagger.json -g typescript-axios -o ./src/api/openAPI --skip-validate-spec"
+    "generate-api": "npx @openapitools/openapi-generator-cli generate -i http://localhost:5263/swagger/v1/swagger.json -g typescript-axios -o ./src/api/openAPI --skip-validate-spec -c ./openapi-config.json"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
