--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "",
-    "generate-api": "npx @openapitools/openapi-generator-cli generate -i http://localhost:5263/swagger/v1/swagger.json -g typescript-axios -o ./src/api/openAPI --skip-validate-spec -c ./openapi-config.json"
+    "generate-api": "npx @openapitools/openapi-generator-cli generate --input-spec http://localhost:5263/swagger/v1/swagger.json --generator-name typescript-axios --output ./src/api/openAPI --skip-validate-spec --config ./openapi-config.json"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "@openapitools/openapi-generator-cli": "^2.15.3",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
