--- a/package.json
+++ b/package.json
@@ -16,17 +16,21 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
+    "@mui/x-date-pickers": "^7.22.2",
     "@toolpad/core": "^0.8.1",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-select-country-list": "^2.2.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
     "@openapitools/openapi-generator-cli": "^2.15.3",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
+    "@types/react-select-country-list": "^2.2.3",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@vitejs/plugin-react": "^4.3.2",
     "eslint": "^9.12.0",
