--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "generate-api": "npx @openapitools/openapi-generator-cli generate --input-spec http://localhost:5263/swagger/v1/swagger.json --generator-name typescript-axios --output ./src/api/openAPI --skip-validate-spec --config ./openapi-config.json"
   },
   "dependencies": {
-    "@canvasjs/charts": "^3.10.21",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.3",
@@ -21,6 +20,7 @@
     "@toolpad/core": "^0.11.0",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "highcharts-react-official": "^3.2.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
