--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "highcharts-react-official": "^3.2.1",
+    "jsencrypt": "^3.3.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
