--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
+    "@mui/x-data-grid": "^7.24.1",
     "@mui/x-date-pickers": "^7.24.1",
     "@toolpad/core": "^0.12.0",
     "axios": "^1.7.9",
