--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "smaiaxfrontend",
   "private": true,
-  "version": "0.1.0",
+  "version": "1.0.0",
   "type": "module",
   "homepage": ".",
   "scripts": {
@@ -45,6 +45,7 @@
     "globals": "^15.14.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.21.0",
-    "vite": "^6.0.11"
+    "vite": "^6.0.11",
+    "vite-plugin-pwa": "^0.21.1"
   }
 }
